content/_generated-doc/3.8/config/quarkus-qute.adoc

:summaryTableId: quarkus-qute
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-qute_configuration]]link:#quarkus-qute_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus-qute-suffixes]]`link:#quarkus-qute_quarkus-qute-suffixes[quarkus.qute.suffixes]`


[.description]
--
The list of suffixes used when attempting to locate a template file.

By default, `engine.getTemplate("foo")` would result in several lookups: `foo`, `foo.html`, `foo.txt`, etc.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_SUFFIXES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_SUFFIXES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`qute.html,qute.txt,html,txt`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus-qute-type-check-excludes]]`link:#quarkus-qute_quarkus-qute-type-check-excludes[quarkus.qute.type-check-excludes]`


[.description]
--
The list of exclude rules used to intentionally ignore some parts of an expression when performing type-safe validation.

An element value must have at least two parts separated by dot. The last part is used to match the property/method name. The prepended parts are used to match the class name. The value `++*++` can be used to match any name.

Examples:

 - `org.acme.Foo.name` - exclude the property/method `name` on the `org.acme.Foo` class
 - `org.acme.Foo.++*++` - exclude any property/method on the `org.acme.Foo` class
 - `++*++.age` - exclude the property/method `age` on any class

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_TYPE_CHECK_EXCLUDES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_TYPE_CHECK_EXCLUDES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus-qute-template-path-exclude]]`link:#quarkus-qute_quarkus-qute-template-path-exclude[quarkus.qute.template-path-exclude]`


[.description]
--
This regular expression is used to exclude template files from the `templates` directory. Excluded templates are neither parsed nor validated during build and are not available at runtime.

The matched input is the file path relative from the `templates` directory and the `/` is used as a path separator.

By default, the hidden files are excluded. The name of a hidden file starts with a dot.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_TEMPLATE_PATH_EXCLUDE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_TEMPLATE_PATH_EXCLUDE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html[Pattern]
 
|`^\..*\|.*\/\..*$`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus-qute-iteration-metadata-prefix]]`link:#quarkus-qute_quarkus-qute-iteration-metadata-prefix[quarkus.qute.iteration-metadata-prefix]`


[.description]
--
The prefix is used to access the iteration metadata inside a loop section.

A valid prefix consists of alphanumeric characters and underscores. Three special constants can be used:

 - `<alias_>` - the alias of an iterated element suffixed with an underscore is used, e.g. `item_hasNext` and `it_count`
 - `<alias?>` - the alias of an iterated element suffixed with a question mark is used, e.g. `item?hasNext` and `it?count`
 - `<none>` - no prefix is used, e.g. `hasNext` and `count`  By default, the `<alias_>` constant is set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_ITERATION_METADATA_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_ITERATION_METADATA_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`<alias_>`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus-qute-escape-content-types]]`link:#quarkus-qute_quarkus-qute-escape-content-types[quarkus.qute.escape-content-types]`


[.description]
--
The list of content types for which the `'`, `"`, `<`, `>` and `&` characters are escaped if a template variant is set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_ESCAPE_CONTENT_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_ESCAPE_CONTENT_TYPES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`text/html,text/xml,application/xml,application/xhtml+xml`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus-qute-default-charset]]`link:#quarkus-qute_quarkus-qute-default-charset[quarkus.qute.default-charset]`


[.description]
--
The default charset of the templates files.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_DEFAULT_CHARSET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_DEFAULT_CHARSET+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]
 
|`UTF-8`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus-qute-dev-mode-no-restart-templates]]`link:#quarkus-qute_quarkus-qute-dev-mode-no-restart-templates[quarkus.qute.dev-mode.no-restart-templates]`


[.description]
--
By default, a template modification results in an application restart that triggers build-time validations.

This regular expression can be used to specify the templates for which the application is not restarted. I.e. the templates are reloaded and only runtime validations are performed.

The matched input is the template path that starts with a template root, and the `/` is used as a path separator. For example, `templates/foo.html`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_DEV_MODE_NO_RESTART_TEMPLATES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_DEV_MODE_NO_RESTART_TEMPLATES+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html[Pattern]
 
|


a| [[quarkus-qute_quarkus-qute-property-not-found-strategy]]`link:#quarkus-qute_quarkus-qute-property-not-found-strategy[quarkus.qute.property-not-found-strategy]`


[.description]
--
The strategy used when a standalone expression evaluates to a "not found" value at runtime and the `quarkus.qute.strict-rendering` config property is set to `false`

This strategy is never used when evaluating section parameters, e.g. `++{#++if foo.name++}++`. In such case, it's the responsibility of the section to handle this situation appropriately.

By default, the `NOT_FOUND` constant is written to the output. However, in the development mode the `PropertyNotFoundStrategy++#++THROW_EXCEPTION` is used by default, i.e. when the strategy is not specified.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_PROPERTY_NOT_FOUND_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_PROPERTY_NOT_FOUND_STRATEGY+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:default[Output the `NOT_FOUND` constant.], tooltip:noop[No operation - no output.], tooltip:throw-exception[Throw a `TemplateException`.], tooltip:output-original[Output the original expression string, e.g. `++{++foo.name++}++`.] 
|


a| [[quarkus-qute_quarkus-qute-remove-standalone-lines]]`link:#quarkus-qute_quarkus-qute-remove-standalone-lines[quarkus.qute.remove-standalone-lines]`


[.description]
--
Specify whether the parser should remove standalone lines from the output. A standalone line is a line that contains at least one section tag, parameter declaration, or comment but no expression and no non-whitespace character.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_REMOVE_STANDALONE_LINES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_REMOVE_STANDALONE_LINES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-qute_quarkus-qute-strict-rendering]]`link:#quarkus-qute_quarkus-qute-strict-rendering[quarkus.qute.strict-rendering]`


[.description]
--
If set to `true` then any expression that is evaluated to a `Results.NotFound` value will always result in a `TemplateException` and the rendering is aborted.

Note that the `quarkus.qute.property-not-found-strategy` config property is completely ignored if strict rendering is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_STRICT_RENDERING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_STRICT_RENDERING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-qute_quarkus-qute-timeout]]`link:#quarkus-qute_quarkus-qute-timeout[quarkus.qute.timeout]`


[.description]
--
The global rendering timeout in milliseconds. It is used if no `timeout` template instance attribute is set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|long 
|`10000`


a| [[quarkus-qute_quarkus-qute-use-async-timeout]]`link:#quarkus-qute_quarkus-qute-use-async-timeout[quarkus.qute.use-async-timeout]`


[.description]
--
If set to `true` then the timeout should also be used for asynchronous rendering methods, such as `TemplateInstance++#++createUni()` and `TemplateInstance++#++renderAsync()`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_USE_ASYNC_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_USE_ASYNC_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus-qute-content-types-content-types]]`link:#quarkus-qute_quarkus-qute-content-types-content-types[quarkus.qute.content-types]`


[.description]
--
The additional map of suffixes to content types. This map is used when working with template variants. By default, the `java.net.URLConnection++#++getFileNameMap()` is used to determine the content type of a template file.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_QUTE_CONTENT_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_QUTE_CONTENT_TYPES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===